web study text alignment fixweb study text alignment fix (#35)
* Changed Path

* Tweak

* Revert "Tweak"

This reverts commit b20e7f992378ae20b9054ad3fdb361a1fd6f0bcd.

* Revert "Changed Path"

This reverts commit 07439200f55a069d5ee4eef3578cfcd9effaf569.

* Tweak

* Updated incorrect

* Fixed text marked text alignment

* web study text alignment fix

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -425,8 +425,11 @@ tbody tr:hover {
 	transform: rotate(45deg);
 }
 
-
 .loading-text {
 	margin-top: -15px;
 	margin-bottom: 15px;
 }
+
+#imgbox {
+	position: relative;
+  }
